--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,44 @@ ul, ol {
   padding-bottom: 94px;
 }
 
+.btn {
+  border-radius: 4px;
+  border-color: transparent;
+  background-color: var(--link-color);
+  color: var(--lighttxt-color);
+  cursor: pointer;
+  font-family: roboto, sans-serif;
+  text-align: center;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: calc(30 / 16);
+  letter-spacing: 0.06em;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms var(--timing-function);
+}
+
+.btn:hover,
+.btn:focus {
+  background-color: var(--active-button);
+  transition: background-color 250ms var(--timing-function);
+}
+
+.section-title {
+  margin-bottom: 50px;
+  color: var(--text-color);
+  font-weight: 700;
+  font-size:36px;
+  line-height: calc(42 / 36);
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+.after-title {
+  font-weight: 700;
+  line-height: calc(16 / 14);
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
 
 /*---НАВІГАЦІЯ---*/
 .portfolio-navigation { 
@@ -81,7 +119,7 @@ ul, ol {
   display: flex;
 }
 
-.contact-unit:not(:last-child) {
+.contact__unit:not(:last-child) {
   margin-right: 40px;
 }
 
@@ -132,6 +170,20 @@ opacity: 1;
   margin-left: auto;
 }
 
+
+
+.navigation .nav-unit + .nav-unit {
+  margin-left: 50px;
+}
+
+.logo {
+  font-family: raleway, sans-serif;
+  line-height: calc(31 / 26);
+  font-size: 26px;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+}
+
 .logo-link {
   color: var(--link-color);
   align-self: center;
@@ -139,20 +191,6 @@ opacity: 1;
 
 .logo-header {
   color: var(--logoblack);
-}
-
-.navigation .nav-unit + .nav-unit {
-  margin-left: 50px;
-}
-
-.logo-link,
-.logo-header,
-.logo-footer {
-  font-family: raleway, sans-serif;
-  line-height: calc(31 / 26);
-  font-size: 26px;
-  letter-spacing: 0.03em;
-  text-decoration: none;
 }
 
 .navigation .link {
@@ -214,7 +252,6 @@ opacity: 1;
 
 link {
   color: var(--text-color);
-
 }
 
 /*---БАННЕР---*/
@@ -255,47 +292,21 @@ background-size:cover ;
 
 .bunner .button {
   padding: 10px 32px;
-  border-radius: 4px;
-  border-color: transparent;
-  background-color: var(--link-color);
-  color: var(--lighttxt-color);
-  cursor: pointer;
-  font-family: roboto, sans-serif;
-  text-align: center;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: calc(30 / 16);
-  letter-spacing: 0.06em;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  transition: background-color 250ms var(--timing-function);
-}
-
-.bunner .button:hover,
-.bunner .button:focus {
-  background-color: var(--active-button);
-  transition: background-color 250ms var(--timing-function);
 }
 
 /*---ПЕРЕВАГИ---*/
 .benefits {padding-top: 44px;}
 .benefit-container {
   display: flex;
+  gap: 30px;
 }
 
 .benefits .unit {
   flex-basis: calc((100% - 90px) / 4);
 }
 
-.benefits .unit + .unit {
-  margin-left: 30px;
-}
-
 .title-benefits {
   margin-bottom: 20px;
-  font-weight: 700;
-  line-height: calc(16 / 14);
-  letter-spacing: 0.03em;
-  color: var(--text-color);
 }
 
 .benefit-item {
@@ -308,6 +319,7 @@ background-size:cover ;
   align-items: center;
   justify-content: center;
 }
+.title-benefits {color: var(--text-color);}
 
 .benefit-icon {
   width: 70px;
@@ -335,6 +347,7 @@ padding-top: 94px;}
 }
 
 .image-box {position: relative;}
+
 .label {
   position: absolute;
   bottom: 0;
@@ -344,24 +357,7 @@ padding-top: 94px;}
   padding-bottom: 27px;
   background-color: rgba(47, 48, 58, 0.8);
   color: var(--lighttxt-color);
-  font-weight: 700;
-  line-height: calc(16 / 14);
   text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
- 
-}
-
-.section-title,
-.section-people,
-.clients-title {
-  margin-bottom: 50px;
-  color: var(--text-color);
-  font-weight: 700;
-  font-size:36px;
-  line-height: calc(42 / 36);
-  text-align: center;
-  letter-spacing: 0.03em;
 }
 
 /*---ЛЮДИ---*/
@@ -448,23 +444,19 @@ padding-top: 94px;}
 /*Постійні клієнти*/
 .clients-list {
   display: flex;
+  gap: 30px;
 
 }
 .clients-items {
 
   flex-basis: calc((100% - 150px) / 6);
 }
-  
-  .clients-items + .clients-items {
-    margin-left: 30px;
-  }
-
 
   .clients-link {
     display: flex;
     justify-content:center;
     align-items: center;
-    padding:16px 32px;
+    padding:15px 31px;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
     fill:#AFB1B8;
@@ -616,30 +608,14 @@ justify-content: space-between;}
   padding-left: 28px;
   padding-right: 28px;
   height: 50px;
-  border-radius: 4px;
-  border-color: transparent;
-  background-color: var(--link-color);
-  color: var(--lighttxt-color);
-  cursor: pointer;
-  font-family: roboto, sans-serif;
   display: flex;
   align-items: center;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: calc(30 / 16);
-  letter-spacing: 0.06em;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  transition: background-color 250ms var(--timing-function);
  }
 
 .icon-send {
   fill: currentColor;
   margin-left: 10px;
  }
-.button-footer:hover,
-.button-footer:focus {
- background-color: var(--active-button);
- transition: background-color 250ms var(--timing-function);}
 
 /*---ПОРТФОЛІО---*/
 .portfolio {
@@ -901,29 +877,10 @@ textarea {resize: none;}
 
 .modal-btn {
   padding: 10px 52px;
-  border-radius: 4px;
-  border-color: transparent;
-  background-color: var(--link-color);
-  color: var(--lighttxt-color);
-  cursor: pointer;
-  font-family: roboto, sans-serif;
-  text-align: center;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: calc(30 / 16);
-  letter-spacing: 0.06em;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   display: block;
   margin-left: auto;
   margin-right: auto;
   margin-top: 30px;
-  transition: background-color 250ms var(--timing-function);
-}
-
-.modal-btn:hover,
-.modal-btn:focus {
-background-color: var(--active-button);
-transition: background-color 250ms var(--timing-function);
 }
 
 .modal-input-wrapper:focus-within{
