--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,13 +1,22 @@
-@import './utils/utils';
-@import './layouts/layers';
-@import '.components/main';
-
- 
-  
-  
- 
-  
+@import './utils/variables';
+@import './utils/reset';
+@import './utils/body';
+@import './utils/img';
+@import './utils/section';
+@import './utils/section-title';
+@import './utils/after-title';
+@import './utils/container';
+@import './utils/button';
+@import './utils/hidden';
+@import './components/logo';
+@import './components/underline';
+@import './components/page-header';
+@import './components/bunner';
+@import './components/benefits';
+@import './components/our-work';
+@import './components/people';
+@import './components/clients';
+@import './components/footer';
+@import './components/portfolio';
+@import './components/modal';
    
-  
-
-  
